# rodep-lore

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_docs.yml
ansible/: Dockerfile.test  Makefile  ansible.cfg  inventory.ini  setup.yml  test_hosts.ini
ansible/tasks/: deploy_bot.yml  docker.yml  udev_doorduino_setup.yml
ansible/templates/: bot.service.j2
bot/: 99-arduino-dfu.rules  Makefile  bot.py  bot.service  platformio.ini  startup.sh
bot/src/: main.cpp
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: Makefile  README.md  conf.py  index.md  index.rst  test.md
docs/source/docker/: intro.rst  intro_to_compose.md  intro_to_docker.md
docs/source/git/: clone.md
docs/source/linux/cli/: intro_to_cli.md
docs/source/linux/networking/: mesh_wifi.md
docs/source/programming/: languages.md
estop_heater/: README.md  estop-heater.service  platformio.ini  send_command.py
estop_heater/src/: main.cpp
minutes/nov/: nov12.md  nov19.md  nov28.md  nov5.md
minutes/oct/: oct20.md  oct29.md
sandbox/: z_subscriber.py
scripts/control/: controller.py  simple_pid_simulator.py
scripts/installation/: docker_for_ubuntu.sh
store/: idea.md
