[project]
name = "rodep-lore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "control>=0.10.2",
    "discord>=2.3.2",
    "furo>=2025.12.19",
    "matplotlib>=3.10.8",
    "myst-parser[extensions]>=4.0.1",
    "numpy>=2.4.0",
    "platformio>=6.1.18",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "sphinx>=6,<8",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=0.5.1",
    "streamlit>=1.52.2",
]
